feat: api-list-extended
client can request different API list formats, compact (default, returns only API names), summary and extended which provide more API meta data. "compact" provides backwards compatibility
