# api-implementation/server/api/services/apis/read.strategy.ts
@@ -1,7 +1,8 @@
+import ApiListFormat = Components.Parameters.ApiListFormat.Format;
 import APIInfo = Components.Schemas.APIInfo;
 
 export interface ApisReadStrategy {
-  all(): Promise<string[]>;
+  all(format?: ApiListFormat): Promise<any[]>;
   byName(name: string): Promise<string>;
   infoByName(name: string): Promise<APIInfo>; 
   canCreate(name: string): Promise<boolean>;
